# poplar-core

./: .gitignore  .gitmodules  GOALS.md  README.md
app/: .gitignore  README.md  docker-compose.yml  start-dev.sh
app/backend/: database.py  main.py  mock_db.py  mock_ipfs.py  models.py  requirements.txt
app/config/: networks.json
app/contracts/: .gitignore  foundry.toml
app/contracts/script/: Check.s.sol  Deploy.s.sol  DeploymentManager.s.sol  setup.sh
app/contracts/src/: Poplar.sol  PoplarParameters.sol  RootToken.sol  SubmissionValidation.sol
app/contracts/test/: SubmissionValidation.t.sol
app/docker/: .dockerignore  Dockerfile.anvil  Dockerfile.backend  Dockerfile.frontend  anvil-startup.sh
app/frontend/: eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
app/frontend/src/: App.tsx  contracts.ts  main.tsx  wagmi.ts
app/ios/: ContentView.swift  PoplarWalletApp.swift
app/requirements/: data-submission-prd.md  plan.md  prd.md  whitepaper.md
requirements/: README.md  gateway-spec.md  plan-v2.md  whitepaper.md
requirements/archive/: data-submission-prd.md  first-time-experience-prd.md  outline.md  plan.md  prd.md  whitepaper-v1.md
uma/: README.md  env.example  pyproject.toml  requirements.txt  uma.py
www/: .gitignore  README.md  next.config.mjs  package.json  tailwind.config.js
www/.husky/: pre-commit
www/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
www/app/components/: CopyBlock.tsx  FollowForm.tsx  LaunchListWidget.tsx  PoplarMark.tsx  RoadmapSection.tsx  (+2 more)
(+20 files in other folders)
