[project]
name = "uma-integration"
version = "0.1.0"
description = "UMA Optimistic Oracle V3 Python Integration"
requires-python = ">=3.8"
dependencies = [
    "web3>=6.0.0",
    "eth-account>=0.9.0", 
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
